<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:layout_rowSpan="1"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <EditText
        android:id="@+id/billAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginLeft="@dimen/marginLeftRight"
        android:layout_marginRight="@dimen/marginLeftRight"
        android:layout_row="1"
        android:layout_rowSpan="1"
        android:ems="10"
        android:hint="@string/amountHint"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:padding="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tipSliderAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:gravity="end"
        android:padding="@dimen/padding_textView_default"
        android:text="@string/tipSliderAmount"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/SeekBarView"
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:layout_column="1"
        android:layout_row="2"
        android:padding="0dp"
        android:progress="15"
        android:layout_gravity="fill_vertical"/>

    <TextView
        android:id="@+id/tipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:gravity="end"
        android:padding="@dimen/padding_textView_default"
        android:text="@string/tipText"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:gravity="center"
        android:padding="@dimen/padding_textView_default"
        android:text="@string/tipAmount"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/totalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4"
        android:gravity="end"
        android:padding="@dimen/padding_textView_default"
        android:text="@string/totalText"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4"
        android:gravity="center"
        android:padding="@dimen/padding_textView_default"
        android:text="@string/totalAmount"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/roundingOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5"
        android:gravity="end"
        android:padding="@dimen/padding_textView_default"
        android:text="@string/roundingText"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup_rounding"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|fill_vertical"
        android:layout_row="5"
        android:layout_rowSpan="1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton_none"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingEnd="@dimen/marginLeftRight"
            android:text="@string/roundingNone" />

        <RadioButton
            android:id="@+id/radioButton_tip"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingEnd="@dimen/marginLeftRight"
            android:text="@string/roundingTip" />

        <RadioButton
            android:id="@+id/radioButton_total"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingEnd="@dimen/marginLeftRight"
            android:text="@string/roundingTotal" />

    </RadioGroup>

    <TextView
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="6"
        android:gravity="center"
        android:padding="@dimen/padding_textView_default"
        android:text="@string/numberPicker"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <NumberPicker
        android:id="@+id/numberPicker_guests"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_column="1"
        android:layout_row="6"
        android:layout_gravity="center_horizontal|fill"/>

    <TextView
        android:id="@+id/totalPerPersonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="7"
        android:gravity="center|end"
        android:padding="@dimen/padding_textView_default"
        android:text="@string/perPersonText"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/totalPerPersonAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="7"
        android:gravity="center"
        android:padding="@dimen/padding_textView_default"
        android:text="@string/perPersonAmount"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />





</GridLayout>